<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <ImageView
                    android:id="@+id/all_calls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_all_contacts"
                    android:padding="15dp"
                    android:src="@drawable/ic_phone"
                    android:tint="@color/neth_appbar_button_icon"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <ImageView
                    android:id="@+id/missed_calls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/content_description_linphone_contacts"
                    android:gravity="center"
                    android:padding="15dp"
                    android:src="@drawable/ic_missed_call"
                    android:tint="@color/neth_appbar_button_icon"/>

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:contentDescription="@string/content_description_edit_list"
                android:padding="15dp"
                android:src="@drawable/ic_delete"
                android:tint="@color/neth_delete_button"/>

        </LinearLayout>

        <include layout="@layout/edit_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/transparent_color"/>

    </LinearLayout>

    <TextView
        android:id="@+id/no_call_history"
        style="@style/NethCTITextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_call_history"
        android:visibility="gone" />

    <TextView
        android:id="@+id/no_missed_call_history"
        style="@style/NethCTITextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_missed_call_history"
        android:visibility="gone" />

</RelativeLayout>
