<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="0.15"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_back"
            android:src="@drawable/ic_back"
            app:tint="@color/neth_button_icon" />

        <TextView
            android:id="@+id/top_bar_title"
            style="@style/NethCTITopBarTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:maxLines="1"
            android:gravity="center_vertical"
            android:text="@string/menu_recordings"/>

        <ImageView
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:contentDescription="@string/content_description_edit_list"
            android:padding="15dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/neth_delete_button" />
    </LinearLayout>

    <include layout="@layout/edit_list" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recording_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/transparent_color"/>

        <ProgressBar
            android:id="@+id/recording_fetch_in_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_recordings"
            style="@style/NethCTITextRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_recordings"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
