<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="6dp"
            android:background="@color/colorPrimaryLight" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                style="@style/NethCTIContactFieldTitle" />

            <ImageView
                android:id="@+id/friendLinphone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/linphone_user"
                android:visibility="gone" />

            <TextView
                android:id="@+id/inviteFriend"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/invite_friend"
                style="@style/NethCTIContactInvite"
                android:visibility="gone" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/numeroOrAddress"
                style="@style/NethCTIContactField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fadingEdge="horizontal"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:layout_marginEnd="6dp"
                android:singleLine="true"/>

            <ImageView
                android:id="@+id/contact_call"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="6dp"
                android:padding="8dp"
                android:background="@drawable/round_accent_button_background"
                android:contentDescription="@string/content_description_call"
                android:src="@drawable/ic_phone"
                android:tint="@color/neth_button_icon"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">



            <ImageView
                android:id="@+id/contact_chat"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                android:background="@drawable/round_orange_button_background"
                android:contentDescription="@string/content_description_chat"
                android:src="@drawable/chat_start_default" />

            <RelativeLayout
                android:id="@+id/contact_chat_secured"
                android:layout_width="61dp"
                android:layout_height="56dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/round_orange_button_background"
                    android:contentDescription="@string/content_description_chat"
                    android:src="@drawable/chat_start_default" />

                <ImageView
                    android:id="@+id/security_level"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/security_toogle_icon_green" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</TableRow>